<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/appInfoFragment" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbar" layout="@layout/default_toolbar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintVertical_bias="1">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/int_const_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/info_app_title" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="18sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="130dp" android:text="@string/info_app_par1" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.045" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView"/>
            <TextView android:textSize="18sp" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/info_app_authors" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.0625" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView1"/>
            <TextView android:textSize="18sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/info_app_par2" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.051" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
            <TextView android:textSize="18sp" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/info_app_desc" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.125" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
            <TextView android:textSize="18sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@+id/splashScreenTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/info_app_par3" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.045" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
            <TextView android:textSize="18sp" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/info_app_emails" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.105" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/splashScreenTitle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
