<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/include2" layout="@layout/toolbar_with_back"/>
    <ScrollView android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/include2" app:layout_constraintVertical_bias="1">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/int_const_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/recover_title" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="18sp" android:gravity="center" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/recover_description" android:singleLine="false" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView"/>
            <TextView android:textSize="18sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="75dp" android:text="@string/recover_email" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.045" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
            <EditText android:textColorHint="@color/disable_color" android:id="@+id/user_email" android:background="@drawable/rounded_rectangle_input" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="330dp" android:layout_height="48dp" android:layout_marginTop="4dp" android:hint="@string/recover_input_email" android:ems="10" android:inputType="textEmailAddress" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.494" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
            <TextView android:textSize="18sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dp" android:layout_marginTop="16dp" android:text="@string/recover_pet_name" android:fontFamily="@font/actor" android:layout_marginStart="6dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.045" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/user_email"/>
            <EditText android:textColorHint="@color/disable_color" android:id="@+id/user_pet" android:background="@drawable/rounded_rectangle_input" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="330dp" android:layout_height="48dp" android:layout_marginTop="4dp" android:hint="@string/recover_input_pet_name" android:ems="10" android:inputType="textPersonName" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.492" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
            <Button android:textSize="18sp" android:id="@+id/send_button" android:background="@drawable/rounded_rectangle_app_name" android:layout_width="80dp" android:layout_height="48dp" android:layout_marginTop="80dp" android:text="@string/button_send" android:textAllCaps="false" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/user_pet"/>
            <ProgressBar android:id="@+id/progressBar" android:background="@drawable/progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:indeterminateTint="@color/action_bar_text" android:backgroundTint="@color/action_bar_background" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/send_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
