<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/splashScreen" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="66sp" android:textStyle="bold" android:textColor="@color/action_bar_text" android:textColorHint="@color/black" android:gravity="center" android:id="@+id/splashScreenTitle" android:background="@drawable/rounded_rectangle_app_name" android:layout_width="310dp" android:layout_height="100dp" android:layout_marginTop="12dp" android:text="@string/app_name" android:fontFamily="@font/acme" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="19sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:text="@string/splash_screen_text1" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/splashScreenTitle"/>
    <ImageView android:id="@+id/imageView3" android:layout_width="186sp" android:layout_height="186sp" android:layout_marginTop="19dp" android:src="@drawable/man_walking_with_pet_leash_vector_flat_illustration_male_strolling_street_with_dog_460582_663" android:contentDescription="@string/splash_screen_center_image" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView android:textSize="19sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:text="@string/splash_screen_text2" android:fontFamily="@font/actor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <ImageView android:id="@+id/imageView7" android:layout_width="match_parent" android:layout_height="177dp" android:layout_marginTop="42dp" android:src="@drawable/animali_381143" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
</androidx.constraintlayout.widget.ConstraintLayout>
